istio/blue-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-deploy-blue
  namespace: istio-system
spec:
  hosts:
  - "nginx.saturn.com"
  gateways:
  - myweb-gateway
  http:
  - route:
      - destination:
          host: nginx-deploy-blue.webzone.svc.cluster.local
          port:
              number: 80
    timeout: 30s
